--- a/assets/styles/dhcp-relay-form.css
+++ b/assets/styles/dhcp-relay-form.css
@@ -14,6 +14,7 @@
     align-items: center;
     justify-content: center;
     gap: 15px;
+    z-index: 1000;
 }
 
 .dhcp-relay-form input, select {
